--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 ambiente
 portalGalt/cadastro/__pycache__
+*/__pycache__/*
 portalGalt/cadastro/migrations/__pycache__
 portalGalt/cadastro/tests/__pycache__
 portalGalt/portalGalt/__pycache__
