--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,8 @@
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
     "next": "15.0.3",
-    "react": "19.0.0-rc-66855b96-20241106",
+    "react": "^19.0.0",
+    "react-cookie": "^7.2.2",
     "react-dom": "19.0.0-rc-66855b96-20241106"
   },
   "devDependencies": {
