feat(#19): ignore __pycache__

--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,7 @@ portalGalt/cadastro/management/commands/__pycache__
 portalGalt/cadastro/migrations/__pycache__
 portalGalt/cadastro/tests/__pycache__
 portalGalt/portalGalt/__pycache__
+portalGalt/frequencia/__pycache__
+portalGalt/frequencia/migrations/__pycache__
 */.coverage
 */htmlcov
