--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,10 +12,12 @@
     "axios": "^1.7.9",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.474.0",
     "next": "15.0.3",
-    "react": "^19.0.0",
+    "react": "^18.2.0",
     "react-cookie": "^7.2.2",
-    "react-dom": "19.0.0-rc-66855b96-20241106"
+    "react-dom": "^18.2.0",
+    "react-icons": "^5.4.0"
   },
   "devDependencies": {
     "@types/node": "^20",
