--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "next": "15.0.3",
     "react": "^18.2.0",
     "react-cookie": "^7.2.2",
+    "react-datepicker": "^8.0.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.4.0"
   },
