--- a/.gitignore
+++ b/.gitignore
@@ -6,5 +6,7 @@ portalGalt/cadastro/tests/__pycache__
 portalGalt/portalGalt/__pycache__
 portalGalt/frequencia/__pycache__
 portalGalt/frequencia/migrations/__pycache__
+portalGalt/simulado/__pycache__
+portalGalt/simulado/migrations/__pycache__
 */.coverage
 */htmlcov
