--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,9 @@
     "react-datepicker": "^8.0.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.4.0",
-    "recharts": "^2.15.1"
+    "react-toastify": "^11.0.3",
+    "recharts": "^2.15.1",
+    "sonner": "^1.7.4"
   },
   "devDependencies": {
     "@types/node": "^20",
