--- a/portalGalt/vercel.json
+++ b/portalGalt/vercel.json
@@ -1,7 +1,7 @@
 {
     "builds": [
       {
-        "src": "portalGalt/portalGalt/wsgi.py",
+        "src": "portalGalt/wsgi.py",
         "use": "@vercel/python",
         "config": { "maxLambdaSize": "15mb", "runtime": "python3.12" }
       },
@@ -18,7 +18,7 @@
       },
       {
         "src": "/(.)",
-        "dest": "portalGalt/portalGalt/wsgi.py"
+        "dest": "portalGalt/wsgi.py"
       }
     ]
   }
